catalytic_table_to_struct/example/src/non_compiling_code/failing_wrong_type_vec.stderr
error[E0277]: the trait bound `Vec<i32>: From<{integer}>` is not satisfied
  --> src/non_compiling_code/failing_wrong_type_vec.rs
   |
   |     query!("select * from test_table where b = 1 and c in ?", a);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<{integer}>` is not implemented for `Vec<i32>`
   |
   = help: the following other types implement trait `From<T>`:
             <Vec<T, A> as From<Box<[T], A>>>
             <Vec<T, A> as From<VecDeque<T, A>>>
             <Vec<T> as From<&[T]>>
             <Vec<T> as From<&mut [T]>>
             <Vec<T> as From<BinaryHeap<T>>>
             <Vec<T> as From<Cow<'a, [T]>>>
             <Vec<T> as From<[T; N]>>
             <Vec<u8> as From<&str>>
           and 2 others
   = note: this error originates in the macro `query` (in Nightly builds, run with -Z macro-backtrace for more info)
